--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "motion": "^12.10.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
